--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.list-items {
+  list-style: none;
+  margin: 0 auto;
+  text-align: center;
+  background-color: transparent;
+  border-radius: 5px;
+  max-width: 400px;
+  padding-left: 0;
+}
+
+.addItem {
+  height: 40px;
+  margin: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: yellow;
+}
+
+
+
+
 .App {
   text-align: center;
 }
